--- a/index.html
+++ b/index.html
@@ -1754,7 +1754,7 @@ body.menu-open .menu-fab {
 <body>
   <div id="status-ticker">
     <div class="ticker-inner">
-      It's opening day on 3rd December! Our website and menu is now available for you to pre-order your meals for collection/delivery from 17:00 - 21:00, each Wednesday to Sunday.
+      
     </div>
   </div>
 
@@ -2444,7 +2444,7 @@ applyHeaderOffset();
 		// Simple config object (edit this anytime)
 		const siteStatus = {
 		  active: true,  // turn off when not needed
-		  message: It's opening day on 3rd December! Our website and menu is now available for you to pre-order your meals for collection/delivery from 17:00 - 21:00, each Wednesday to Sunday.
+		  message: "It's opening day on 3rd December! Our website and menu is now available for you to pre-order your meals for collection/delivery from 17:00 - 21:00, each Wednesday to Sunday.🎉🎉🎉"
 		  
 		  //"We’re not open yet as we're making final preparations to ensure you have an amazing at home Thai dining experience! We hope to open by 3rd December 🎉"
 		};
