--- a/index.html
+++ b/index.html
@@ -1911,7 +1911,7 @@ body.menu-open .menu-fab {
         We deliver within a 3 mile radius (zoom out to view).
       </p>
 	  <p class="muted">
-        Tel: 0113 3447431
+        Tel: 0113 4699564
       </p>
     </div>
 
@@ -1933,7 +1933,7 @@ body.menu-open .menu-fab {
       <div class="footer-contact-row">
         <h4>Contact Us</h4>
         <p class="contact-inline muted">
-          📞 <a href="tel:01133447431">0113 3447431</a>
+          📞 <a href="tel:01134699564">0113 4699564</a>
           <span class="dot">•</span>
           ✉️ <a href="mailto:hello@rungsthaikitchen.co.uk">hello@rungsthaikitchen.co.uk</a>
         </p>
@@ -2444,7 +2444,7 @@ applyHeaderOffset();
 		// Simple config object (edit this anytime)
 		const siteStatus = {
 		  active: true,  // turn off when not needed
-		  message: "It's opening day on 3rd December! Our website and menu is now available for you to pre-order your meals for collection/delivery from 17:00 - 21:00, each Wednesday to Sunday.🎉🎉🎉"
+		  message: "It's opening day on 3rd December! Our website and menu is now available for you to pre-order your meals for collection/delivery from 17:00 - 21:00, each Wednesday to Sunday.🎉"
 		  
 		  //"We’re not open yet as we're making final preparations to ensure you have an amazing at home Thai dining experience! We hope to open by 3rd December 🎉"
 		};
